--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="LPLMastery.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Service.html">Services</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
