--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="LPLMastery.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Service.html">Service</a></li>
                     <li><a href="Contact.html">Contact</a></li> <!-- Added Contact link -->
